# friend-rs

./: .env.example  .env.example.pt  .gitignore  Cargo.toml  README.md
src/: audio.rs  config.rs  main.rs  memory.rs  ollama.rs  stt.rs  tts.rs
